# tank

./: .gitignore  CLAUDE.md  README.md  cabal.project  flake.nix  tank.cabal
.github/workflows/: docs.yml
app/: Debug.hs  Main.hs
artifacts/: devlog.md  plan_task68_migrate_pane_rendering.md  plan_task9_wire_tank_layout.md
docs-site/: mkdocs.yml
docs-site/docs/: architecture.md  concepts.md  getting-started.md  index.md  protocol.md  screen-sync.md
docs-site/docs/assets/concepts/: render-concepts.py
docs/plans/: 2026-03-06-daemon-router-design.md  2026-03-06-daemon-router-impl.md  2026-03-06-io-routing-design.md  2026-03-06-io-routing-impl.md  2026-03-06-tank-layout-design.md  2026-03-06-tank-layout-impl.md  2026-03-06-tank-layout-improvements.md  2026-03-07-plug-client-design.md  2026-03-07-plug-client-impl.md  2026-03-08-grid-delta-serialization-design.md  2026-03-08-grid-delta-serialization-impl.md
schema/: grid.capnp  protocol.capnp
src/Tank/Core/: CRDT.hs  Protocol.hs  Types.hs  Wire.hs
src/Tank/Daemon/: Main.hs  Router.hs  Socket.hs  State.hs
src/Tank/Plug/: Client.hs  Operator.hs  Terminal.hs
src/Tank/Plug/Operator/: Overlay.hs  Tools.hs
src/Tank/Terminal/: CellAdapter.hs  Emulator.hs  Grid.hs
tank-layout/: LICENSE  tank-layout.cabal
tank-layout/app/: RenderConcepts.hs
tank-layout/src/Tank/: Layout.hs
tank-layout/src/Tank/Layout/: Cell.hs  DSL.hs  Render.hs  Types.hs
tank-layout/src/Tank/Layout/Backend/: ANSI.hs  PNG.hs
tank-layout/test/Tank/Layout/: CellSpec.hs  DSLSpec.hs  RenderSpec.hs  TypesSpec.hs
tank-layout/test/Tank/Layout/Backend/: ANSISpec.hs  PNGSpec.hs
tests/Tank/Core/: CRDTSpec.hs  WireSpec.hs
tests/Tank/Daemon/: IntegrationSpec.hs  RouterSpec.hs  SocketSpec.hs
tests/Tank/Layout/: RenderSpec.hs
tests/Tank/Plug/: ClientSpec.hs  TerminalSpec.hs
tests/Tank/Plug/Operator/: ToolsSpec.hs
tests/Tank/Terminal/: CellAdapterSpec.hs  EmulatorSpec.hs  GridSpec.hs
