cabal-version:   3.0
name:            tank-layout
version:         0.1.0.0
synopsis:        Declarative terminal layout language with ANSI and PNG backends
license:         MIT
license-file:    LICENSE
author:          jhhuh
build-type:      Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
  import:           warnings
  exposed-modules:
    Tank.Layout
    Tank.Layout.Backend.ANSI
    Tank.Layout.Backend.PNG
    Tank.Layout.Cell
    Tank.Layout.DSL
    Tank.Layout.Render
    Tank.Layout.Types
  build-depends:
    , base        >= 4.17 && < 5
    , text        >= 2.0  && < 3
    , bytestring  >= 0.11 && < 1
    , vector      >= 0.13 && < 1
    , containers  >= 0.6  && < 1
    , JuicyPixels >= 3.3  && < 4
    , FontyFruity >= 0.5  && < 1
    , Rasterific  >= 0.7  && < 1
  hs-source-dirs:   src
  default-language: GHC2021

executable tank-render-concepts
  import:           warnings
  main-is:          RenderConcepts.hs
  build-depends:
    , base         >= 4.17 && < 5
    , tank-layout
    , text         >= 2.0  && < 3
    , bytestring   >= 0.11 && < 1
    , filepath     >= 1.4  && < 2
    , directory    >= 1.3  && < 2
    , vector       >= 0.13 && < 1
  hs-source-dirs:   app
  default-language: GHC2021

test-suite tank-layout-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:
    , base         >= 4.17 && < 5
    , tank-layout
    , hspec        >= 2.10 && < 3
    , text         >= 2.0  && < 3
    , vector       >= 0.13 && < 1
    , bytestring   >= 0.11 && < 1
  other-modules:
    Tank.Layout.CellSpec
    Tank.Layout.DSLSpec
    Tank.Layout.RenderSpec
    Tank.Layout.TypesSpec
    Tank.Layout.Backend.ANSISpec
    Tank.Layout.Backend.PNGSpec
  hs-source-dirs:   test
  default-language: GHC2021
  -- hspec-discover provided on PATH by nix devShell
